# RomanNumeral

./: CMakeLists.txt
cmake/Modules/: FindGMock.cmake
dependencies/WIN/gmock/lib/: gmock_main.lib  gmock_maind.lib
dependencies/WIN/gtest/lib/: gtest.lib  gtest_main.lib  gtest_maind.lib  gtestd.lib
roman/: CMakeLists.txt
roman/include/indigo/common/: dll_defines.h  roman.cpp  roman.h
roman_features/: CMakeLists.txt  read_raw_data_steps.cpp
test_utils/: CMakeLists.txt
tests/: CMakeLists.txt  main.cpp  roman_test.cpp  test.h
